--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
   "dependencies": {
     "express": "^4.15.2",
     "supertest": "^3.0.0"
+  },
+  "engines": {
+    "node": "v6.9.X",
+    "npm": "4.1.X"
   }
 }
