--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eve-linebot",
-  "version": "1.0.0-dev",
+  "version": "1.0.0",
   "description": "",
   "main": "app.js",
   "scripts": {
