--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "./dist/app/app.js",
   "scripts": {
+    "postinstall": "npm run compile",
     "clean": "rimraf ./dist",
     "lint": "tslint -c ./tslint.json ./app/**/*.ts ./test/**/*.ts",
     "compile": "npm run clean && npm run lint && tsc -p ./tsconfig.json",
