--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@types/mocha": "^2.2.40",
     "@types/node": "^7.0.11",
+    "body-parser": "^1.17.1",
     "express": "^4.15.2",
     "request": "^2.81.0",
     "rimraf": "^2.6.1",
