--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/node": "^7.0.11",
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
+    "mongodb": "^2.2.26",
     "mongoose": "^4.9.6",
     "request": "^2.81.0",
     "rimraf": "^2.6.1",
