--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
     "compilerOptions": {
         "outDir": "./dist",
         "module": "commonjs",
-        "target": "es5",
+        "target": "ES6",
         "noImplicitAny": false,
         "sourceMap": false
     },
